--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="BVD: Video Downloader for Facebook helps you to easily download videos from Facebook. It is extremely easy and simple, and 100% Free! It helps you to download videos in different quality from Facebook." />
     <meta name="keywords" content="facebook video downloader hd, facebook video downloader online, facebook video downloader apk, facebook video downloader chrome, facebook video downloader for pc, facebook video downloader website, facebook video downloader with time, facebook video downloader for iphone, facebook video downloader app, facebook video downloader app for pc, facebook video downloader apk 2020, facebook video downloader apk 2021, facebook video downloader app for android, facebook video downloader app for iphone, facebook video downloader app 2021, facebook with video downloader apk, the best facebook video downloader, the fastest facebook video downloader, extension for facebook video downloader, app for facebook video downloader, app for fb video downloader" />
 
-    <meta content='https://hidden-pirates.blogspot.com/2021/09/f5-video-downloader-all-in-one-video.html' property='og:url'/>
+    <meta content='https://hiddenpirates.github.io/Facebook-Video-Downloader/' property='og:url'/>
     <meta content='BVD: Facebook Video Downloader HD - Download HD Videos from Facebook' property='og:title'/>
 	<meta content='BVD: Video Downloader for Facebook helps you to easily download videos from Facebook. It is extremely easy and simple, and 100% Free! It helps you to download videos in different quality from Facebook.' property='og:description'/>
 
@@ -60,31 +60,31 @@
 
 	  <div class="slider-item">
 	  	<a href="https://play.google.com/store/apps/details?id=com.hiddenpirates.bvdforfb">
-	  		<img src="assets/images/1.png" />
+	  		<img src="https://1.bp.blogspot.com/-awDN3MKZ8A4/YTjwfrArdmI/AAAAAAAAAwE/0N_mFwIdzzINxU1dpLNc0mivH-dCpbVsQCNcBGAsYHQ/w640-h360/1.png" />
 	  	</a>
 	  </div>
 	  
 	  <div class="slider-item">
 	  	<a href="https://play.google.com/store/apps/details?id=com.hiddenpirates.bvdforfb">
-	  		<img src="assets/images/2.png" />
+	  		<img src="https://1.bp.blogspot.com/-CmP2JvWfms0/YTjwf7GhmzI/AAAAAAAAAwI/eDDNc879Qak8CsjCyLXeqn8a_IVwH66ggCNcBGAsYHQ/w640-h360/2.png" />
 	  	</a>
 	  </div>
 	  
 	  <div class="slider-item">
 	  	<a href="https://play.google.com/store/apps/details?id=com.hiddenpirates.bvdforfb">
-	  		<img src="assets/images/3.png" />
+	  		<img src="https://1.bp.blogspot.com/-Enz_AuWL6vI/YTjwf6C8yXI/AAAAAAAAAwM/Cvj-oawKleUV_P8hoRs1A0MQUDeMoQoAgCNcBGAsYHQ/w640-h360/3.png" />
 	  	</a>
 	  </div>
 	  
 	  <div class="slider-item">
 	  	<a href="https://play.google.com/store/apps/details?id=com.hiddenpirates.bvdforfb">
-	  		<img src="assets/images/4.png" />
+	  		<img src="https://1.bp.blogspot.com/-7hbIiL8ujLI/YTjwg8nrNOI/AAAAAAAAAwQ/RPqc07qZxjAWByNKAwC4F7K8yijPFfLwgCNcBGAsYHQ/w640-h360/4.png" />
 	  	</a>
 	  </div>
 
 	  <div class="slider-item">
 	  	<a href="https://play.google.com/store/apps/details?id=com.hiddenpirates.bvdforfb">
-	  		<img src="assets/images/5.png" />
+	  		<img src="https://1.bp.blogspot.com/-WnX2DWW4R9E/YTjwhfJBWEI/AAAAAAAAAwU/3GWggBt5krky2P57rGStCIoWbfIY_z3zACNcBGAsYHQ/w640-h360/5.png" />
 	  	</a>
 	  </div>
 
