--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="theme-color" content="#111111" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+	
+	<meta name="google-site-verification" content="-98ZpwwIcdG0cjNAkQ3BFqA3HmGiFjf9HYUvRf1ZPjw" />
 
 	<meta name="robots" content="index, follow" />
 	<meta name="description" content="BVD: Video Downloader for Facebook helps you to easily download videos from Facebook. It is extremely easy and simple, and 100% Free! It helps you to download videos in different quality from Facebook." />
